--- a/app/pages/secondPage/secondPage.html
+++ b/app/pages/secondPage/secondPage.html
@@ -1,11 +1,13 @@
-<ion-navbar *navbar>
-  <ion-title>
-    Home
-  </ion-title>
-</ion-navbar>
+<ion-header>
+  <ion-navbar>
+    <ion-title>
+      Second Page
+    </ion-title>
+  </ion-navbar>
+</ion-header>
 
 <ion-content class="secondPage" padding>
-<h3 style="text_align: center;">The First Solution</h3>
+<h3>The First Solution</h3>
 Welcome {{parameter1}} {{parameter2}}
 <h3>The Second Solution</h3>
 Welcome {{serviceData}}
